--- a/.env.local_dev
+++ b/.env.local_dev
@@ -47,10 +47,10 @@ MAILGUN_API_KEY=
 MAILGUN_DOMAIN=mail.yourdomain.com
 MAILGUN_SENDER=postmaster@mail.yourdomain.com
 SMTP_ENABLE=true
-SMTP_HOST=smtp.yourhost.com
+SMTP_HOST=panda-host.eu
 SMTP_PORT=443
-SMTP_USER_EMAIL=mailer@yourdomain.com
-SMTP_PASS=password   # if your password includes spaces then write password in single quotes ('asdf pasd asdf bgds'). 
+SMTP_USER_EMAIL=docu@panda-host.eu
+SMTP_PASS=on?E6j153   # if your password includes spaces then write password in single quotes ('asdf pasd asdf bgds'). 
 
 
 # Base64 encoded PFX or p12 document signing certificate file *********************************************************************************************************************
