--- a/.env.local_dev
+++ b/.env.local_dev
@@ -49,8 +49,8 @@ MAILGUN_SENDER=postmaster@mail.yourdomain.com
 SMTP_ENABLE=true
 SMTP_HOST=panda-host.eu
 SMTP_PORT=443
-SMTP_USER_EMAIL=docu@panda-host.eu
-SMTP_PASS=on?E6j153   # if your password includes spaces then write password in single quotes ('asdf pasd asdf bgds'). 
+SMTP_USER_EMAIL=4545454545
+SMTP_PASS=454545454545   # if your password includes spaces then write password in single quotes ('asdf pasd asdf bgds'). 
 
 
 # Base64 encoded PFX or p12 document signing certificate file *********************************************************************************************************************
